# projeto-py-full-do-zero

./: .gitignore  README.md  main.py  pyproject.toml
data/: BBAS3_2024_05_2024-05-24_a_2024-05-31.csv  BBAS3_2024_06_2024-06-03_a_2024-06-28.csv  BBAS3_2024_07_2024-07-01_a_2024-07-31.csv  BBAS3_2024_08_2024-08-01_a_2024-08-30.csv  BBAS3_2024_09_2024-09-02_a_2024-09-30.csv  BBAS3_2024_10_2024-10-01_a_2024-10-31.csv  BBAS3_2024_11_2024-11-01_a_2024-11-29.csv  BBAS3_2024_12_2024-12-02_a_2024-12-30.csv  BBAS3_2025_01_2025-01-02_a_2025-01-31.csv  BBAS3_2025_02_2025-02-03_a_2025-02-28.csv  BBAS3_2025_03_2025-03-05_a_2025-03-31.csv  BBAS3_2025_04_2025-04-01_a_2025-04-30.csv  BBAS3_2025_05_2025-05-02_a_2025-05-28.csv  BBDC3_2024_05_2024-05-24_a_2024-05-31.csv  BBDC3_2024_06_2024-06-03_a_2024-06-28.csv  BBDC3_2024_07_2024-07-01_a_2024-07-31.csv  BBDC3_2024_08_2024-08-01_a_2024-08-30.csv  BBDC3_2024_09_2024-09-02_a_2024-09-30.csv  BBDC3_2024_10_2024-10-01_a_2024-10-31.csv  BBDC3_2024_11_2024-11-01_a_2024-11-29.csv  BBDC3_2024_12_2024-12-02_a_2024-12-30.csv  BBDC3_2025_01_2025-01-02_a_2025-01-31.csv  BBDC3_2025_02_2025-02-03_a_2025-02-28.csv  BBDC3_2025_03_2025-03-05_a_2025-03-31.csv  BBDC3_2025_04_2025-04-01_a_2025-04-30.csv  BBDC3_2025_05_2025-05-02_a_2025-05-28.csv  BBDC4_2024_05_2024-05-24_a_2024-05-31.csv  BBDC4_2024_06_2024-06-03_a_2024-06-28.csv  BBDC4_2024_07_2024-07-01_a_2024-07-31.csv  BBDC4_2024_08_2024-08-01_a_2024-08-30.csv  BBDC4_2024_09_2024-09-02_a_2024-09-30.csv  BBDC4_2024_10_2024-10-01_a_2024-10-31.csv  BBDC4_2024_11_2024-11-01_a_2024-11-29.csv  (+84 more)
(+2 files in other folders)
